--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <script>
        function initMap() {
-         var location = {lat: 30.316496,78.032188};
+         var location = {lat: 30.316496,lang: 78.032188};
          var map =new google.maps.Map(document.getElementById("map"),{
            zoom:4,
            centre: location
