--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <head>
       <title>Movie-maps</title>
     
-    
      <h1>Hi there!</h1>
     <p>
       I'm your cool new webpage. 
@@ -46,5 +45,6 @@
         });
       }
     </script>
+    <center><a href="near.html"><button>go to find locations</button></a></center><br><br>
   </head>
 </html>
