--- a/index.html
+++ b/index.html
@@ -20,15 +20,23 @@ div {text-align: center;}
         <h1>SHOOT map</h1>
         
       </div>
+     <style>
+         body {
+            background-image: url("https://cdn.glitch.com/e205a537-5d78-4c20-b192-72fa8adc672b%2FbannerImage.jpg?v=1612089185603");
+         }
+      </style>
 
       <div id="bannerImage">
         <img src="https://cdn.glitch.com/50e94eba-b371-45c9-bccc-4bdd70829ce0%2Fpexels-spencer-davis-4353638.jpg?v=1612055384247" alt="cc"> <!-- Might change dimensions later -->
         <h2>Project</h2>
         <p>
-            About the project
+            <h3>
+            SHOOT map<br>  
+        </h3>
+Makes location scouting easy and fun for <br>photographers, filmmakers, and creative minds.<br> Instantly find unique locations for your next photo or<br> film shoot no matter where you are or<br> how large your budget is!
         </p>
         <div id="buttonCall">
-          <p><a href="ind.html">MAPS</p> 
+          <p><a href="ind.html"  >MAPS</p> 
         </div>
       </div>
    
