--- a/near.html
+++ b/near.html
@@ -12,7 +12,7 @@
 
 <body id="grad">
     <header>
-    <h1>Services and Providers</h1>
+    <h1>MARKERS FOR BEST LOCATIONS IN TOWN FOR SHOOTS</h1>
     </header>
     <style>
         *{
@@ -72,22 +72,22 @@
     </style>
     <div class = "lists">
         <ul>
-            <li><a href="#" onclick="callPersonOne();">Darryl Wu</a></li>
-            <li><a href="#" onclick="callPersonFour();">Bob Jones</a></li>
-            <li><a href="#" onclick="callPersonFive();">Kathy Tran</a></li>
-            <li><a href="#" onclick="callPersonSix();">Alex Nguyen</a></li>
+            <li><a href="#" onclick="callPersonOne();">BEST 1</a></li>
+            <li><a href="#" onclick="callPersonFour();">BEST 2</a></li>
+            <li><a href="#" onclick="callPersonFive();">BEST 3</a></li>
+            <li><a href="#" onclick="callPersonSix();">BEST 4</a></li>
         </ul>
     <ul>
-            <li><a href="#" onclick="callPersonTwo();">John Smith</a></li>
-            <li><a href="#" onclick="callPersonSeven();">Old McDonald</a></li>
-            <li><a href="#" onclick="callPersonEight();">Kevin Matthew</a></li>
-            <li><a href="#" onclick="callPersonThree();">Nick Fury</a></li>
+            <li><a href="#" onclick="callPersonTwo();">BEST 5</a></li>
+            <li><a href="#" onclick="callPersonSeven();">BEST 6</a></li>
+            <li><a href="#" onclick="callPersonEight();">BEST 7</a></li>
+            <li><a href="#" onclick="callPersonThree();">BEST 8</a></li>
         </ul>
     <ul>
-            <li><a href="#" onclick="callPersonNine();">Luke Matthew</a></li>
-            <li><a href="#" onclick="callPersonTen();">GI Joe</a></li>
-            <li><a href="#" onclick="callPersonEleven();">Herold Wong</a></li>
-            <li><a href="#" onclick="callPersonTwelve();">Tyler Zhang</a></li>
+            <li><a href="#" onclick="callPersonNine();">BEST 9</a></li>
+            <li><a href="#" onclick="callPersonTen();">BEST 10</a></li>
+            <li><a href="#" onclick="callPersonEleven();">BEST 11</a></li>
+            <li><a href="#" onclick="callPersonTwelve();">BEST 12</a></li>
         </ul>
     </div>
 
@@ -99,8 +99,6 @@
     </div>
     
     <script src="app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+   
     </body>
 </html>
